--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -75,19 +75,24 @@ input[type=button]:hover {
     border-radius: 6px;
     display: grid;
     gap: 10px;
-    grid-template-columns: repeat(5, 0fr);
+    grid-template-columns: repeat(5, 1fr);
     padding: 10px;
 }
 
 
-.there {
+.figure-square {
     width: 100px;
     height: 100px;
-    background-color: darkblue;
-    /* border-radius: 50%; */
+}
+
+.figure-circle {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
 
 .message {
     margin-top: 20px;
     text-align: center;
+    height: 30px;
 }
