--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -76,19 +76,23 @@ input[type=button]:hover {
     display: grid;
     gap: 10px;
     grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     padding: 10px;
+    transform: rotateX(180deg);
 }
 
 
 .figure-square {
     width: 100px;
     height: 100px;
+    cursor: pointer;
 }
 
 .figure-circle {
     width: 100px;
     height: 100px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .message {
