--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -86,6 +86,7 @@ input[type=button]:hover {
 .figure-square {
     width: 100px;
     height: 100px;
+    border-radius: 3px;
     cursor: pointer;
 }
 
@@ -100,4 +101,8 @@ input[type=button]:hover {
     margin-top: 20px;
     text-align: center;
     height: 30px;
+}
+
+.message span {
+    color: #f00;
 }
